load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "alpine-image-tar",
    srcs = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": ["@alpine_image_aarch64//file"],
        "@io_bazel_rules_go//go/platform:linux_s390x": ["@alpine_image_s390x//file"],
        "//conditions:default": ["@alpine_image//file"],
    }),
    extension = "tar.gz",
    mode = "440",
    owner = "107.107",
    package_dir = "/disk",
)

oci_image(
    name = "alpine-container-disk-image",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "@io_bazel_rules_go//go/platform:linux_s390x": "s390x",
        "//conditions:default": "amd64",
    }),
    os = "linux",
    tars = [":alpine-image-tar"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "cirros-image-tar",
    srcs = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": ["@cirros_image_aarch64//file"],
        "//conditions:default": ["@cirros_image//file"],
    }),
    mode = "440",
    owner = "107.107",
    package_dir = "/disk",
)

oci_image(
    name = "cirros-container-disk-image",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "//conditions:default": "amd64",
    }),
    os = "linux",
    tars = [":cirros-image-tar"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "cirros-custom-image-tar",
    srcs = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": ["@cirros_image_aarch64//file"],
        "//conditions:default": ["@cirros_image//file"],
    }),
    mode = "440",
    owner = "107.107",
    package_dir = "/custom-disk",
)

# used for e2e testing of custom base baths
oci_image(
    name = "cirros-custom-container-disk-image",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "//conditions:default": "amd64",
    }),
    os = "linux",
    tars = [":cirros-custom-image-tar"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "virtio-image-tar",
    srcs = ["@virtio_win_image//file"],
    mode = "440",
    owner = "107.107",
    package_dir = "/disk",
)

oci_image(
    name = "virtio-container-disk-image",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "//conditions:default": "amd64",
    }),
    os = "linux",
    tars = [":virtio-image-tar"],
    visibility = ["//visibility:public"],
)

oci_image(
    name = "fedora-with-test-tooling",
    base = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "@fedora_with_test_tooling_aarch64",
        "@io_bazel_rules_go//go/platform:linux_s390x": "@fedora_with_test_tooling_s390x",
        "//conditions:default": "@fedora_with_test_tooling",
    }),
    visibility = ["//visibility:public"],
)

oci_image(
    name = "alpine-with-test-tooling",
    base = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "@alpine_with_test_tooling",
        "@io_bazel_rules_go//go/platform:linux_s390x": "@alpine_with_test_tooling",
        "//conditions:default": "@alpine_with_test_tooling",
    }),
    visibility = ["//visibility:public"],
)

oci_image(
    name = "alpine-ext-kernel-boot-demo-container",
    base = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "@alpine-ext-kernel-boot-demo-container-base",
        "@io_bazel_rules_go//go/platform:linux_s390x": "@alpine-ext-kernel-boot-demo-container-base",
        "//conditions:default": "@alpine-ext-kernel-boot-demo-container-base",
    }),
    tars = [":alpine-image-tar"],
    visibility = ["//visibility:public"],
)

oci_image(
    name = "fedora-realtime",
    base = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "@fedora_realtime",
        "@io_bazel_rules_go//go/platform:linux_s390x": "@fedora_realtime",
        "//conditions:default": "@fedora_realtime",
    }),
    visibility = ["//visibility:public"],
)
