load("@rules_oci//oci:defs.bzl", "oci_image")
load("//bazel:image.bzl", "provision_user")

oci_image(
    name = "kubevirt-testing-base",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
        "@io_bazel_rules_go//go/platform:linux_s390x": "s390x",
        "//conditions:default": "amd64",
    }),
    os = "linux",
    tars = [
        "//bazel/compat:testimage",
        ":user-layer",
    ],
    visibility = ["//visibility:public"],
)

provision_user(
    name = "user-layer",
    gid = 101,
    groupname = "nginx",
    provision_root_user = True,
    shell = "/bin/bash",
    uid = 101,
    username = "nginx",
)
