load("@io_bazel_rules_docker//contrib:group.bzl", "group_entry", "group_file")
load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "layer_from_tar")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

layer_from_tar(
    name = "testimage-layer-x86_64",
    src = "//rpm:testimage_x86_64",
)

layer_from_tar(
    name = "testimage-layer-aarch64",
    src = "//rpm:testimage_aarch64",
)

layer_from_tar(
    name = "testimage-layer-s390x",
    src = "//rpm:testimage_s390x",
)

layer_from_tar(
    name = "passwd-layer",
    src = ":passwd-tar",
)

image_manifest(
    name = "kubevirt-testing-base",
    layers = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            ":testimage-layer-aarch64",
            ":passwd-layer",
        ],
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            ":testimage-layer-s390x",
            ":passwd-layer",
        ],
        "//conditions:default": [
            ":testimage-layer-x86_64",
            ":passwd-layer",
        ],
    }),
    visibility = ["//visibility:public"],
)

passwd_entry(
    name = "root-user",
    gid = 0,
    home = "/root",
    info = "root",
    shell = "/bin/bash",
    uid = 0,
    username = "root",
)

passwd_entry(
    name = "nginx-user",
    gid = 101,
    home = "",
    shell = "/bin/bash",
    uid = 101,
    username = "nginx",
)

passwd_file(
    name = "passwd",
    entries = [
        ":nginx-user",
        ":root-user",
    ],
)

group_entry(
    name = "nginx-group",
    gid = 101,
    groupname = "nginx",
)

group_entry(
    name = "root-group",
    gid = 0,
    groupname = "root",
)

group_file(
    name = "group",
    entries = [
        ":nginx-group",
        ":root-group",
    ],
)

pkg_tar(
    name = "passwd-tar",
    srcs = [
        ":group",
        ":passwd",
    ],
    mode = "0644",
    package_dir = "etc",
    visibility = ["//visibility:public"],
)
