load("@bazeldnf//:deps.bzl", "rpm", "rpmtree", "tar2files")
load("@bazeldnf//:def.bzl", "bazeldnf")

rpmtree(
    name = "testimage_ppc64le",
    rpms = [
        "@acl-0__2.2.53-5.fc32.ppc64le//rpm",
        "@alternatives-0__1.11-6.fc32.ppc64le//rpm",
        "@audit-libs-0__3.0-0.19.20191104git1c2f876.fc32.ppc64le//rpm",
        "@basesystem-0__11-9.fc32.ppc64le//rpm",
        "@bash-0__5.0.17-1.fc32.ppc64le//rpm",
        "@bzip2-libs-0__1.0.8-2.fc32.ppc64le//rpm",
        "@ca-certificates-0__2020.2.41-1.1.fc32.ppc64le//rpm",
        "@coreutils-single-0__8.32-4.fc32.1.ppc64le//rpm",
        "@cracklib-0__2.9.6-22.fc32.ppc64le//rpm",
        "@crypto-policies-0__20200619-1.git781bbd4.fc32.ppc64le//rpm",
        "@cryptsetup-libs-0__2.3.4-1.fc32.ppc64le//rpm",
        "@curl-minimal-0__7.69.1-7.fc32.ppc64le//rpm",
        "@dbus-1__1.12.20-1.fc32.ppc64le//rpm",
        "@dbus-broker-0__24-1.fc32.ppc64le//rpm",
        "@dbus-common-1__1.12.20-1.fc32.ppc64le//rpm",
        "@device-mapper-0__1.02.171-1.fc32.ppc64le//rpm",
        "@device-mapper-libs-0__1.02.171-1.fc32.ppc64le//rpm",
        "@e2fsprogs-0__1.45.5-3.fc32.ppc64le//rpm",
        "@e2fsprogs-libs-0__1.45.5-3.fc32.ppc64le//rpm",
        "@elfutils-default-yama-scope-0__0.182-1.fc32.ppc64le//rpm",
        "@elfutils-libelf-0__0.182-1.fc32.ppc64le//rpm",
        "@elfutils-libs-0__0.182-1.fc32.ppc64le//rpm",
        "@expat-0__2.2.8-2.fc32.ppc64le//rpm",
        "@fedora-gpg-keys-0__32-10.ppc64le//rpm",
        "@fedora-logos-httpd-0__30.0.2-4.fc32.ppc64le//rpm",
        "@fedora-release-common-0__32-4.ppc64le//rpm",
        "@fedora-release-container-0__32-4.ppc64le//rpm",
        "@fedora-repos-0__32-10.ppc64le//rpm",
        "@filesystem-0__3.14-2.fc32.ppc64le//rpm",
        "@fuse-libs-0__2.9.9-9.fc32.ppc64le//rpm",
        "@gawk-0__5.0.1-7.fc32.ppc64le//rpm",
        "@gdbm-libs-1__1.18.1-3.fc32.ppc64le//rpm",
        "@glib2-0__2.64.6-1.fc32.ppc64le//rpm",
        "@glibc-0__2.31-4.fc32.ppc64le//rpm",
        "@glibc-common-0__2.31-4.fc32.ppc64le//rpm",
        "@glibc-langpack-en-0__2.31-4.fc32.ppc64le//rpm",
        "@gmp-1__6.1.2-13.fc32.ppc64le//rpm",
        "@gnutls-0__3.6.15-1.fc32.ppc64le//rpm",
        "@grep-0__3.3-4.fc32.ppc64le//rpm",
        "@groff-base-0__1.22.3-22.fc32.ppc64le//rpm",
        "@gzip-0__1.10-2.fc32.ppc64le//rpm",
        "@hwdata-0__0.342-1.fc32.ppc64le//rpm",
        "@iptables-libs-0__1.8.4-9.fc32.ppc64le//rpm",
        "@iputils-0__20200821-1.fc32.ppc64le//rpm",
        "@json-c-0__0.13.1-13.fc32.ppc64le//rpm",
        "@keyutils-libs-0__1.6-4.fc32.ppc64le//rpm",
        "@kmod-libs-0__27-1.fc32.ppc64le//rpm",
        "@krb5-libs-0__1.18.2-29.fc32.ppc64le//rpm",
        "@libacl-0__2.2.53-5.fc32.ppc64le//rpm",
        "@libaio-0__0.3.111-7.fc32.ppc64le//rpm",
        "@libargon2-0__20171227-4.fc32.ppc64le//rpm",
        "@libattr-0__2.4.48-8.fc32.ppc64le//rpm",
        "@libblkid-0__2.35.2-1.fc32.ppc64le//rpm",
        "@libcap-0__2.26-7.fc32.ppc64le//rpm",
        "@libcap-ng-0__0.7.11-1.fc32.ppc64le//rpm",
        "@libcom_err-0__1.45.5-3.fc32.ppc64le//rpm",
        "@libcurl-minimal-0__7.69.1-7.fc32.ppc64le//rpm",
        "@libdb-0__5.3.28-40.fc32.ppc64le//rpm",
        "@libfdisk-0__2.35.2-1.fc32.ppc64le//rpm",
        "@libffi-0__3.1-24.fc32.ppc64le//rpm",
        "@libgcc-0__10.2.1-9.fc32.ppc64le//rpm",
        "@libgcrypt-0__1.8.5-3.fc32.ppc64le//rpm",
        "@libgpg-error-0__1.36-3.fc32.ppc64le//rpm",
        "@libibverbs-0__32.0-1.fc32.ppc64le//rpm",
        "@libidn2-0__2.3.0-2.fc32.ppc64le//rpm",
        "@libmnl-0__1.0.4-11.fc32.ppc64le//rpm",
        "@libmount-0__2.35.2-1.fc32.ppc64le//rpm",
        "@libnetfilter_conntrack-0__1.0.7-4.fc32.ppc64le//rpm",
        "@libnfnetlink-0__1.0.1-17.fc32.ppc64le//rpm",
        "@libnghttp2-0__1.41.0-1.fc32.ppc64le//rpm",
        "@libnl3-0__3.5.0-2.fc32.ppc64le//rpm",
        "@libnsl2-0__1.2.0-6.20180605git4a062cf.fc32.ppc64le//rpm",
        "@libpcap-14__1.9.1-3.fc32.ppc64le//rpm",
        "@libpwquality-0__1.4.4-1.fc32.ppc64le//rpm",
        "@librdmacm-0__32.0-1.fc32.ppc64le//rpm",
        "@librtas-0__2.0.2-5.fc32.ppc64le//rpm",
        "@libseccomp-0__2.5.0-3.fc32.ppc64le//rpm",
        "@libselinux-0__3.0-5.fc32.ppc64le//rpm",
        "@libsemanage-0__3.0-3.fc32.ppc64le//rpm",
        "@libsepol-0__3.0-4.fc32.ppc64le//rpm",
        "@libsigsegv-0__2.11-10.fc32.ppc64le//rpm",
        "@libsmartcols-0__2.35.2-1.fc32.ppc64le//rpm",
        "@libss-0__1.45.5-3.fc32.ppc64le//rpm",
        "@libstdc__plus____plus__-0__10.2.1-9.fc32.ppc64le//rpm",
        "@libtasn1-0__4.16.0-1.fc32.ppc64le//rpm",
        "@libtirpc-0__1.2.6-1.rc4.fc32.ppc64le//rpm",
        "@libunistring-0__0.9.10-7.fc32.ppc64le//rpm",
        "@libutempter-0__1.1.6-18.fc32.ppc64le//rpm",
        "@libuuid-0__2.35.2-1.fc32.ppc64le//rpm",
        "@libverto-0__0.3.0-9.fc32.ppc64le//rpm",
        "@libxcrypt-0__4.4.17-1.fc32.ppc64le//rpm",
        "@libxml2-0__2.9.10-8.fc32.ppc64le//rpm",
        "@libzstd-0__1.4.5-4.fc32.ppc64le//rpm",
        "@lsof-0__4.93.2-3.fc32.ppc64le//rpm",
        "@lz4-libs-0__1.9.1-2.fc32.ppc64le//rpm",
        "@mpfr-0__4.0.2-5.fc32.ppc64le//rpm",
        "@ncurses-0__6.1-15.20191109.fc32.ppc64le//rpm",
        "@ncurses-base-0__6.1-15.20191109.fc32.ppc64le//rpm",
        "@ncurses-libs-0__6.1-15.20191109.fc32.ppc64le//rpm",
        "@nettle-0__3.5.1-5.fc32.ppc64le//rpm",
        "@nginx-1__1.18.0-1.fc32.ppc64le//rpm",
        "@nginx-filesystem-1__1.18.0-1.fc32.ppc64le//rpm",
        "@nginx-mimetypes-0__2.1.48-7.fc32.ppc64le//rpm",
        "@nmap-ncat-2__7.80-4.fc32.ppc64le//rpm",
        "@openssl-1__1.1.1i-1.fc32.ppc64le//rpm",
        "@openssl-libs-1__1.1.1i-1.fc32.ppc64le//rpm",
        "@p11-kit-0__0.23.22-1.fc32.ppc64le//rpm",
        "@p11-kit-trust-0__0.23.22-1.fc32.ppc64le//rpm",
        "@pam-0__1.3.1-30.fc32.ppc64le//rpm",
        "@pciutils-0__3.6.4-1.fc32.ppc64le//rpm",
        "@pciutils-libs-0__3.6.4-1.fc32.ppc64le//rpm",
        "@pcre-0__8.44-2.fc32.ppc64le//rpm",
        "@pcre2-0__10.36-1.fc32.ppc64le//rpm",
        "@pcre2-syntax-0__10.36-1.fc32.ppc64le//rpm",
        "@perl-Carp-0__1.50-440.fc32.ppc64le//rpm",
        "@perl-Config-General-0__2.63-11.fc32.ppc64le//rpm",
        "@perl-Encode-4__3.08-458.fc32.ppc64le//rpm",
        "@perl-Errno-0__1.30-458.fc32.ppc64le//rpm",
        "@perl-Exporter-0__5.74-2.fc32.ppc64le//rpm",
        "@perl-File-Path-0__2.17-1.fc32.ppc64le//rpm",
        "@perl-File-Temp-1__0.230.900-440.fc32.ppc64le//rpm",
        "@perl-Getopt-Long-1__2.52-1.fc32.ppc64le//rpm",
        "@perl-HTTP-Tiny-0__0.076-440.fc32.ppc64le//rpm",
        "@perl-IO-0__1.40-458.fc32.ppc64le//rpm",
        "@perl-MIME-Base64-0__3.15-440.fc32.ppc64le//rpm",
        "@perl-PathTools-0__3.78-442.fc32.ppc64le//rpm",
        "@perl-Pod-Escapes-1__1.07-440.fc32.ppc64le//rpm",
        "@perl-Pod-Perldoc-0__3.28.01-443.fc32.ppc64le//rpm",
        "@perl-Pod-Simple-1__3.40-2.fc32.ppc64le//rpm",
        "@perl-Pod-Usage-4__2.01-1.fc32.ppc64le//rpm",
        "@perl-Scalar-List-Utils-3__1.54-440.fc32.ppc64le//rpm",
        "@perl-Socket-4__2.030-1.fc32.ppc64le//rpm",
        "@perl-Storable-1__3.15-443.fc32.ppc64le//rpm",
        "@perl-Term-ANSIColor-0__5.01-2.fc32.ppc64le//rpm",
        "@perl-Term-Cap-0__1.17-440.fc32.ppc64le//rpm",
        "@perl-Text-ParseWords-0__3.30-440.fc32.ppc64le//rpm",
        "@perl-Text-Tabs__plus__Wrap-0__2013.0523-440.fc32.ppc64le//rpm",
        "@perl-Time-Local-2__1.300-2.fc32.ppc64le//rpm",
        "@perl-Unicode-Normalize-0__1.26-440.fc32.ppc64le//rpm",
        "@perl-constant-0__1.33-441.fc32.ppc64le//rpm",
        "@perl-interpreter-4__5.30.3-458.fc32.ppc64le//rpm",
        "@perl-libs-4__5.30.3-458.fc32.ppc64le//rpm",
        "@perl-macros-4__5.30.3-458.fc32.ppc64le//rpm",
        "@perl-parent-1__0.238-1.fc32.ppc64le//rpm",
        "@perl-podlators-1__4.14-2.fc32.ppc64le//rpm",
        "@perl-threads-1__2.22-442.fc32.ppc64le//rpm",
        "@perl-threads-shared-0__1.60-441.fc32.ppc64le//rpm",
        "@pixman-0__0.40.0-1.fc32.ppc64le//rpm",
        "@procps-ng-0__3.3.16-1.fc32.ppc64le//rpm",
        "@qemu-guest-agent-2__4.2.1-1.fc32.ppc64le//rpm",
        "@qemu-img-2__4.2.1-1.fc32.ppc64le//rpm",
        "@qrencode-libs-0__4.0.2-5.fc32.ppc64le//rpm",
        "@rdma-core-0__32.0-1.fc32.ppc64le//rpm",
        "@readline-0__8.0-4.fc32.ppc64le//rpm",
        "@scsi-target-utils-0__1.0.79-1.fc32.ppc64le//rpm",
        "@sed-0__4.5-5.fc32.ppc64le//rpm",
        "@setup-0__2.13.6-2.fc32.ppc64le//rpm",
        "@sg3_utils-0__1.44-3.fc32.ppc64le//rpm",
        "@sg3_utils-libs-0__1.44-3.fc32.ppc64le//rpm",
        "@shadow-utils-2__4.8.1-3.fc32.ppc64le//rpm",
        "@stress-0__1.0.4-24.fc32.ppc64le//rpm",
        "@systemd-0__245.8-2.fc32.ppc64le//rpm",
        "@systemd-libs-0__245.8-2.fc32.ppc64le//rpm",
        "@systemd-pam-0__245.8-2.fc32.ppc64le//rpm",
        "@systemd-rpm-macros-0__245.8-2.fc32.ppc64le//rpm",
        "@tzdata-0__2020d-1.fc32.ppc64le//rpm",
        "@util-linux-0__2.35.2-1.fc32.ppc64le//rpm",
        "@xz-libs-0__5.2.5-1.fc32.ppc64le//rpm",
        "@zlib-0__1.2.11-21.fc32.ppc64le//rpm",
    ],
    symlinks = {
        "/var/run": "../run",
    },
    visibility = ["//visibility:public"],
)

rpmtree(
    name = "testimage_x86_64",
    rpms = [
        "@acl-0__2.2.53-5.fc32.x86_64//rpm",
        "@alternatives-0__1.11-6.fc32.x86_64//rpm",
        "@audit-libs-0__3.0-0.19.20191104git1c2f876.fc32.x86_64//rpm",
        "@basesystem-0__11-9.fc32.x86_64//rpm",
        "@bash-0__5.0.17-1.fc32.x86_64//rpm",
        "@bzip2-libs-0__1.0.8-2.fc32.x86_64//rpm",
        "@ca-certificates-0__2020.2.41-1.1.fc32.x86_64//rpm",
        "@coreutils-single-0__8.32-4.fc32.1.x86_64//rpm",
        "@cracklib-0__2.9.6-22.fc32.x86_64//rpm",
        "@crypto-policies-0__20200619-1.git781bbd4.fc32.x86_64//rpm",
        "@cryptsetup-libs-0__2.3.4-1.fc32.x86_64//rpm",
        "@curl-minimal-0__7.69.1-7.fc32.x86_64//rpm",
        "@dbus-1__1.12.20-1.fc32.x86_64//rpm",
        "@dbus-broker-0__24-1.fc32.x86_64//rpm",
        "@dbus-common-1__1.12.20-1.fc32.x86_64//rpm",
        "@device-mapper-0__1.02.171-1.fc32.x86_64//rpm",
        "@device-mapper-libs-0__1.02.171-1.fc32.x86_64//rpm",
        "@dmidecode-1__3.2-5.fc32.x86_64//rpm",
        "@e2fsprogs-0__1.45.5-3.fc32.x86_64//rpm",
        "@e2fsprogs-libs-0__1.45.5-3.fc32.x86_64//rpm",
        "@elfutils-default-yama-scope-0__0.182-1.fc32.x86_64//rpm",
        "@elfutils-libelf-0__0.182-1.fc32.x86_64//rpm",
        "@elfutils-libs-0__0.182-1.fc32.x86_64//rpm",
        "@expat-0__2.2.8-2.fc32.x86_64//rpm",
        "@fedora-gpg-keys-0__32-10.x86_64//rpm",
        "@fedora-logos-httpd-0__30.0.2-4.fc32.x86_64//rpm",
        "@fedora-release-common-0__32-4.x86_64//rpm",
        "@fedora-release-container-0__32-4.x86_64//rpm",
        "@fedora-repos-0__32-10.x86_64//rpm",
        "@filesystem-0__3.14-2.fc32.x86_64//rpm",
        "@fuse-libs-0__2.9.9-9.fc32.x86_64//rpm",
        "@gawk-0__5.0.1-7.fc32.x86_64//rpm",
        "@gdbm-libs-1__1.18.1-3.fc32.x86_64//rpm",
        "@glib2-0__2.64.6-1.fc32.x86_64//rpm",
        "@glibc-0__2.31-4.fc32.x86_64//rpm",
        "@glibc-common-0__2.31-4.fc32.x86_64//rpm",
        "@glibc-langpack-en-0__2.31-4.fc32.x86_64//rpm",
        "@gmp-1__6.1.2-13.fc32.x86_64//rpm",
        "@gnutls-0__3.6.15-1.fc32.x86_64//rpm",
        "@gperftools-libs-0__2.7-7.fc32.x86_64//rpm",
        "@grep-0__3.3-4.fc32.x86_64//rpm",
        "@groff-base-0__1.22.3-22.fc32.x86_64//rpm",
        "@gzip-0__1.10-2.fc32.x86_64//rpm",
        "@hwdata-0__0.342-1.fc32.x86_64//rpm",
        "@iptables-libs-0__1.8.4-9.fc32.x86_64//rpm",
        "@iputils-0__20200821-1.fc32.x86_64//rpm",
        "@json-c-0__0.13.1-13.fc32.x86_64//rpm",
        "@keyutils-libs-0__1.6-4.fc32.x86_64//rpm",
        "@kmod-libs-0__27-1.fc32.x86_64//rpm",
        "@krb5-libs-0__1.18.2-29.fc32.x86_64//rpm",
        "@libacl-0__2.2.53-5.fc32.x86_64//rpm",
        "@libaio-0__0.3.111-7.fc32.x86_64//rpm",
        "@libargon2-0__20171227-4.fc32.x86_64//rpm",
        "@libattr-0__2.4.48-8.fc32.x86_64//rpm",
        "@libblkid-0__2.35.2-1.fc32.x86_64//rpm",
        "@libcap-0__2.26-7.fc32.x86_64//rpm",
        "@libcap-ng-0__0.7.11-1.fc32.x86_64//rpm",
        "@libcom_err-0__1.45.5-3.fc32.x86_64//rpm",
        "@libcurl-minimal-0__7.69.1-7.fc32.x86_64//rpm",
        "@libdb-0__5.3.28-40.fc32.x86_64//rpm",
        "@libfdisk-0__2.35.2-1.fc32.x86_64//rpm",
        "@libffi-0__3.1-24.fc32.x86_64//rpm",
        "@libgcc-0__10.2.1-9.fc32.x86_64//rpm",
        "@libgcrypt-0__1.8.5-3.fc32.x86_64//rpm",
        "@libgpg-error-0__1.36-3.fc32.x86_64//rpm",
        "@libibverbs-0__32.0-1.fc32.x86_64//rpm",
        "@libidn2-0__2.3.0-2.fc32.x86_64//rpm",
        "@libmnl-0__1.0.4-11.fc32.x86_64//rpm",
        "@libmount-0__2.35.2-1.fc32.x86_64//rpm",
        "@libnetfilter_conntrack-0__1.0.7-4.fc32.x86_64//rpm",
        "@libnfnetlink-0__1.0.1-17.fc32.x86_64//rpm",
        "@libnghttp2-0__1.41.0-1.fc32.x86_64//rpm",
        "@libnl3-0__3.5.0-2.fc32.x86_64//rpm",
        "@libnsl2-0__1.2.0-6.20180605git4a062cf.fc32.x86_64//rpm",
        "@libpcap-14__1.9.1-3.fc32.x86_64//rpm",
        "@libpwquality-0__1.4.4-1.fc32.x86_64//rpm",
        "@librdmacm-0__32.0-1.fc32.x86_64//rpm",
        "@libseccomp-0__2.5.0-3.fc32.x86_64//rpm",
        "@libselinux-0__3.0-5.fc32.x86_64//rpm",
        "@libsemanage-0__3.0-3.fc32.x86_64//rpm",
        "@libsepol-0__3.0-4.fc32.x86_64//rpm",
        "@libsigsegv-0__2.11-10.fc32.x86_64//rpm",
        "@libsmartcols-0__2.35.2-1.fc32.x86_64//rpm",
        "@libss-0__1.45.5-3.fc32.x86_64//rpm",
        "@libstdc__plus____plus__-0__10.2.1-9.fc32.x86_64//rpm",
        "@libtasn1-0__4.16.0-1.fc32.x86_64//rpm",
        "@libtirpc-0__1.2.6-1.rc4.fc32.x86_64//rpm",
        "@libunistring-0__0.9.10-7.fc32.x86_64//rpm",
        "@libunwind-0__1.3.1-7.fc32.x86_64//rpm",
        "@libutempter-0__1.1.6-18.fc32.x86_64//rpm",
        "@libuuid-0__2.35.2-1.fc32.x86_64//rpm",
        "@libverto-0__0.3.0-9.fc32.x86_64//rpm",
        "@libxcrypt-0__4.4.17-1.fc32.x86_64//rpm",
        "@libxml2-0__2.9.10-8.fc32.x86_64//rpm",
        "@libzstd-0__1.4.5-4.fc32.x86_64//rpm",
        "@lsof-0__4.93.2-3.fc32.x86_64//rpm",
        "@lz4-libs-0__1.9.1-2.fc32.x86_64//rpm",
        "@mpfr-0__4.0.2-5.fc32.x86_64//rpm",
        "@ncurses-0__6.1-15.20191109.fc32.x86_64//rpm",
        "@ncurses-base-0__6.1-15.20191109.fc32.x86_64//rpm",
        "@ncurses-libs-0__6.1-15.20191109.fc32.x86_64//rpm",
        "@nettle-0__3.5.1-5.fc32.x86_64//rpm",
        "@nginx-1__1.18.0-1.fc32.x86_64//rpm",
        "@nginx-filesystem-1__1.18.0-1.fc32.x86_64//rpm",
        "@nginx-mimetypes-0__2.1.48-7.fc32.x86_64//rpm",
        "@nmap-ncat-2__7.80-4.fc32.x86_64//rpm",
        "@openssl-1__1.1.1i-1.fc32.x86_64//rpm",
        "@openssl-libs-1__1.1.1i-1.fc32.x86_64//rpm",
        "@p11-kit-0__0.23.22-1.fc32.x86_64//rpm",
        "@p11-kit-trust-0__0.23.22-1.fc32.x86_64//rpm",
        "@pam-0__1.3.1-30.fc32.x86_64//rpm",
        "@pciutils-0__3.6.4-1.fc32.x86_64//rpm",
        "@pciutils-libs-0__3.6.4-1.fc32.x86_64//rpm",
        "@pcre-0__8.44-2.fc32.x86_64//rpm",
        "@pcre2-0__10.36-1.fc32.x86_64//rpm",
        "@pcre2-syntax-0__10.36-1.fc32.x86_64//rpm",
        "@perl-Carp-0__1.50-440.fc32.x86_64//rpm",
        "@perl-Config-General-0__2.63-11.fc32.x86_64//rpm",
        "@perl-Encode-4__3.08-458.fc32.x86_64//rpm",
        "@perl-Errno-0__1.30-458.fc32.x86_64//rpm",
        "@perl-Exporter-0__5.74-2.fc32.x86_64//rpm",
        "@perl-File-Path-0__2.17-1.fc32.x86_64//rpm",
        "@perl-File-Temp-1__0.230.900-440.fc32.x86_64//rpm",
        "@perl-Getopt-Long-1__2.52-1.fc32.x86_64//rpm",
        "@perl-HTTP-Tiny-0__0.076-440.fc32.x86_64//rpm",
        "@perl-IO-0__1.40-458.fc32.x86_64//rpm",
        "@perl-MIME-Base64-0__3.15-440.fc32.x86_64//rpm",
        "@perl-PathTools-0__3.78-442.fc32.x86_64//rpm",
        "@perl-Pod-Escapes-1__1.07-440.fc32.x86_64//rpm",
        "@perl-Pod-Perldoc-0__3.28.01-443.fc32.x86_64//rpm",
        "@perl-Pod-Simple-1__3.40-2.fc32.x86_64//rpm",
        "@perl-Pod-Usage-4__2.01-1.fc32.x86_64//rpm",
        "@perl-Scalar-List-Utils-3__1.54-440.fc32.x86_64//rpm",
        "@perl-Socket-4__2.030-1.fc32.x86_64//rpm",
        "@perl-Storable-1__3.15-443.fc32.x86_64//rpm",
        "@perl-Term-ANSIColor-0__5.01-2.fc32.x86_64//rpm",
        "@perl-Term-Cap-0__1.17-440.fc32.x86_64//rpm",
        "@perl-Text-ParseWords-0__3.30-440.fc32.x86_64//rpm",
        "@perl-Text-Tabs__plus__Wrap-0__2013.0523-440.fc32.x86_64//rpm",
        "@perl-Time-Local-2__1.300-2.fc32.x86_64//rpm",
        "@perl-Unicode-Normalize-0__1.26-440.fc32.x86_64//rpm",
        "@perl-constant-0__1.33-441.fc32.x86_64//rpm",
        "@perl-interpreter-4__5.30.3-458.fc32.x86_64//rpm",
        "@perl-libs-4__5.30.3-458.fc32.x86_64//rpm",
        "@perl-macros-4__5.30.3-458.fc32.x86_64//rpm",
        "@perl-parent-1__0.238-1.fc32.x86_64//rpm",
        "@perl-podlators-1__4.14-2.fc32.x86_64//rpm",
        "@perl-threads-1__2.22-442.fc32.x86_64//rpm",
        "@perl-threads-shared-0__1.60-441.fc32.x86_64//rpm",
        "@pixman-0__0.40.0-1.fc32.x86_64//rpm",
        "@procps-ng-0__3.3.16-1.fc32.x86_64//rpm",
        "@qemu-guest-agent-2__4.2.1-1.fc32.x86_64//rpm",
        "@qemu-img-2__4.2.1-1.fc32.x86_64//rpm",
        "@qrencode-libs-0__4.0.2-5.fc32.x86_64//rpm",
        "@rdma-core-0__32.0-1.fc32.x86_64//rpm",
        "@readline-0__8.0-4.fc32.x86_64//rpm",
        "@scsi-target-utils-0__1.0.79-1.fc32.x86_64//rpm",
        "@sed-0__4.5-5.fc32.x86_64//rpm",
        "@setup-0__2.13.6-2.fc32.x86_64//rpm",
        "@sg3_utils-0__1.44-3.fc32.x86_64//rpm",
        "@sg3_utils-libs-0__1.44-3.fc32.x86_64//rpm",
        "@shadow-utils-2__4.8.1-3.fc32.x86_64//rpm",
        "@stress-0__1.0.4-24.fc32.x86_64//rpm",
        "@systemd-0__245.8-2.fc32.x86_64//rpm",
        "@systemd-libs-0__245.8-2.fc32.x86_64//rpm",
        "@systemd-pam-0__245.8-2.fc32.x86_64//rpm",
        "@systemd-rpm-macros-0__245.8-2.fc32.x86_64//rpm",
        "@tzdata-0__2020d-1.fc32.x86_64//rpm",
        "@util-linux-0__2.35.2-1.fc32.x86_64//rpm",
        "@virt-what-0__1.20-2.fc32.x86_64//rpm",
        "@which-0__2.21-19.fc32.x86_64//rpm",
        "@xz-libs-0__5.2.5-1.fc32.x86_64//rpm",
        "@zlib-0__1.2.11-21.fc32.x86_64//rpm",
    ],
    symlinks = {
        "/var/run": "../run",
    },
    visibility = ["//visibility:public"],
)
